--- a/project.json
+++ b/project.json
@@ -2,7 +2,7 @@
   "name": "CCW_Practise",
   "projectId": "951f846b-06ed-4f01-aba7-e0ff55678feb",
   "description": "Blank Process",
-  "main": "Main.xaml",
+  "main": "SCM_Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.2]",
     "UiPath.Mail.Activities": "[1.21.1]",
@@ -50,8 +50,8 @@
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
     {
-      "filePath": "Main.xaml",
-      "uniqueId": "47a04b96-062c-4399-aa80-6dfaf9b0a2e6",
+      "filePath": "SCM_Main.xaml",
+      "uniqueId": "553d8116-3225-4d42-97f0-3c3b5cfe2d3d",
       "input": [],
       "output": []
     }
